<resources>
    <string name="app_name">Dadbod</string>
    <string name="auth_failed" />
    <string name="like" />
    <string name="dislike" />
    <string name="beer" />
    <string name="forward" />
    <string name="back" />
    <string name="Title" />
    <string name="profile" />
    <string name="chat" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
